--- a/src/components/GmFormCommon/DyInputFormList/index.mdx
+++ b/src/components/GmFormCommon/DyInputFormList/index.mdx
@@ -1,5 +1,17 @@
-import DyInputFormList from "./index";
+---
+name: input文档
+route: /DyInputFormList
+menu: 父组件菜单
+---
+
+import { Playground } from 'docz';
+import DyInputFormList from './index';
 
 # Input 组件
 
-<DyInputFormList />
+## Basic usage
+
+<Playground>
+  <div>Click me</div>
+  <DyInputFormList>Click me</DyInputFormList>
+</Playground>
